force-app/main/default/objects/TriggerControl__c/TriggerControl__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is used to disable triggers dynamically without updating code</description>
    <label>TriggerControl</label>
</CustomObject>