force-app/main/default/objects/TriggerControl__c/fields/Disable_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Trigger?</label>
    <type>Checkbox</type>
</CustomField>