force-app/main/default/objects/TriggerControl__c/fields/DisableTrigger__c.field-meta.xml
<CustomField>
    <fullName>DisableTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used as an ON/OFF flag to disable the respective trigger</description>
    <label>Disable Trigger?</label>
    <type>Checkbox</type>
</CustomField>