force-app/main/default/objects/TriggerControl__c/fields/Last_Batch_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch_Run_Date__c</fullName>
    <label>Last Batch Run Date</label>
    <type>DateTime</type>
</CustomField>